# sfmflex-release

./: LICENSE  README.md
code/: CMakeLists.txt  deps.jl  set_loadpath.jl
code/cmake/: CMakeParseArguments.cmake  FindHdf5.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  OptimizeCompilerFlags.cmake  SelectLibraryConfigurations.cmake
code/jl/: JacobianUtils.jl  LinAlgUtils.jl
code/scripts/: bundle2bal.jl  download_bal.jl  generate_json_for_vis.jl  run_1dsfm_datasets.jl  run_ba_on_bal.jl
code/src/: bundle_adjuster.cc  compute_jacobian.cc  simple_bundle_adjuster.cc
code/vis/: sample_scene.json  vis.html  vis.js  vis_supp.html
docs/: index.md
visualizations/: Dubrovnik_demo.html  Ladybug_demo.html  TowerOfLondon_demo.html  Trafalgar_demo.html  Venice_demo.html  Yorkminster_demo.html
visualizations/data/: trafalgar-257.json
visualizations/js/: vis_supp.js
